kubernetes/apps/external-proxy/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: alderaan
  annotations:
    tailscale.com/tailnet-fqdn: alderaan.donkey-betta.ts.net
    name: alderaan
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName
